# gcn-ma-link-prediction

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/datasets/: bitcoinotc.yaml  collegemsg.yaml  eut.yaml  lastfm.yaml  mooc_actions.yaml  wikipedia.yaml
configs/experiments/: dgcn_bitcoinotc.yaml  dgcn_collegemsg.yaml  dgcn_collegemsg_smoke.yaml  dgcn_eut.yaml  dgcn_lastfm.yaml  dgcn_mooc_actions.yaml  dgcn_wikipedia.yaml  dygnn_bitcoinotc.yaml  dygnn_collegemsg.yaml  dygnn_collegemsg_smoke.yaml  dygnn_eut.yaml  dygnn_mooc_actions.yaml  dygnn_wikipedia.yaml  evolvegcn_o_bitcoinotc.yaml  (+21 more)
docs/: gcn-ma-strengths-weaknesses.md  paper-notes.md  paper-pages.md  reproduction-log.md  thesis_chapter.md
results/: beta_grid_bitcoinotc.jsonl  metrics.jsonl  metrics_plan1_hidden128.jsonl
scripts/: aggregate_gcn_ma_results.py  aggregate_results.py  beta_grid_search.py  build_pptx.py  build_revealjs.py  download_datasets.py  make_plots.py  parse_training_logs.py  plot_dataset_topology.py  run_seeds.sh  train.py
tests/: conftest.py  test_bitcoinotc_loader.py  test_cache.py  test_collegemsg_loader.py  test_dgcn_smoke.py  test_dygnn_smoke.py  test_dynamic_graph.py  test_eut_loader.py  test_evaluator.py  test_evolvegcn_smoke.py  test_htgn_smoke.py  test_hyperbolic_ops.py  test_lastfm_loader.py  test_loader_base.py  test_make_plots.py  test_metrics.py  test_models_smoke.py  test_mooc_actions_loader.py  test_negative_sampling.py  test_nrnae.py  test_parse_training_logs.py  test_plot_dataset_topology.py  test_seed.py  test_train_ratio_wiring.py  test_wikipedia_loader.py
(+67 files in other folders)
