[project]
name = "gcn-ma-link-prediction"
version = "0.1.0"
description = "Reproduction of GCN_MA (Mei & Zhao 2024) for dynamic network link prediction"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.4.0",
    "torch-geometric==2.6.1",
    "networkx>=3.2",
    "pandas>=2.0",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.5"]
scripts = ["python-pptx>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: integration tests > 1 minute"]
